@@ -6,6 +6,8 @@
 
 2002-03-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
+	* Netcomics/HTML/Themes/NoStatus.pm: new theme which doesn't
+	include the status column in the index.
 	* Netcomics/HTML/Theme.pm: Fixed mis-named html_key.
 	(generate_images): Changed to "require" MIME::Base64 instead of
 	"use" so as to relieve dependency just for theme image support.
